--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body{
     background-color: rgb(204, 226, 228);
+    margin: 0 0 0 200px;
 }
 hr{
     background-color: rgb(144, 151, 207);
@@ -9,25 +10,17 @@ hr{
 table.intro{
     height: 20%;
     width: 60%;
-    position: relative;
-    left: 300px;
 }
 .experience{
     height: 20%;
     width: 25%;
-    position: relative;
-    left: 300px;
 }
 h1{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #546ac5;
-    position: relative;
-    left: 300px;
 }
 h3{
     color: #546ac5;
-    position: relative;
-    left: 300px;
 }
 hr{
     border-style: none;
@@ -40,26 +33,4 @@ hr{
 #work{
     font-family: Arial, Helvetica, sans-serif;
     color: black;
-    position: relative;
-    left: 0px;
-}
-table{
-    position: relative;
-    left: 300px;
-}
-li{
-    position: relative;
-    left: 300px;
-}
-#myname{
-    position: relative;
-    left: 0px;
-}
-label{
-    position: relative;
-    left: 300px;
-}
-input{
-    position: relative;
-    left: 300px;
 }
