--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,38 @@
 body{
     background-color: rgb(204, 226, 228);
-    margin: 0 0 0 200px;
+    font-family: 'Julee', cursive;
+    font-size: 1rem;
 }
 hr{
     background-color: rgb(144, 151, 207);
     border-style: none;
-    height: 2px;
+    height: 0.125rem;
 }
 table.intro{
-    height: 20%;
+    height: 1.25rem;
     width: 60%;
 }
 .experience{
-    height: 20%;
-    width: 25%;
+    height: 1.25rem;
+    width: 1.5625rem;
 }
 h1{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #546ac5;
+    font-family: 'Kalam', cursive;
+    font-size: 2.5rem;
 }
 h3{
     color: #546ac5;
+    font-family: 'Cinzel', serif;
 }
 hr{
     border-style: none;
     background-color: rgb(204, 226, 228);
     border-top-style: dotted;
     border-color: gray;
-    border-width: 5px;
+    border-width: 0.3125rem;
     width: 5%;
+    align-items: center;
 }
 #work{
     font-family: Arial, Helvetica, sans-serif;
